# zhaw-bachelor

./: .editorconfig  .gitignore  LICENSE  README.md  test.py
semester-1/: math.ipynb
semester-1/db-1/: exam.sql  postgres_air_check.sql
semester-1/expd-1/: .Rhistory  AB_11.R  AB_12.R  Pitch.qmd  Prakt_0211.R  Prakt_0510.R  Prakt_0712.R  Prakt_0911.R  Prakt_1210.R  Prakt_1611.R  Prakt_1611.Rmd  Prakt_1910.R  Prakt_2109.R  Prakt_2311.R  Prakt_2610.R  Prakt_2809.R  Probezwischenprüdung.R  Project.R  Vorl_0211.R  Vorl_0510.R  Vorl_1210.R  Vorl_1910.R  Vorl_2311.R  Vorl_2610.R  Vorl_2809.R  Zwischenprüfung.R  final-exam.R
semester-1/math/: folgen_aritmetic.py  newton.py
semester-1/prog-1/: template.py
semester-2/: euler_verfahren.py  math.ipynb
semester-2/de-1/: DE_Lab01_EnteringTheWorldOfPythonAndPandas.ipynb  sw-1.ipynb  test_video.py
semester-2/prog-2/: template.py
semester-2/wahr/: Demo_Normalverteilung.R  Probe-pruef-1.R  Probe-pruef-2.R  Pruef.R  Quizz-1.R  Quizz-2-pruef.R  Quizz-2.R  Quizz-3.R  Uebbung.R  Uebung-1.R  Uebung-11.R  Uebung-2.R  Uebung-3.R  Uebung-6.R  Uebung-8.R  Vorl-10.R  Vorl-11.R  Vorl-12.R  Vorl-2.R  Vorl-3.R  Vorl-4.R  Vorl-5.R  Vorl-7.R  Vorl-8.R  Vorl-9.R
semester-3/: test.ipynb
semester-3/data-science-grundlagen/: Cargo.toml  Classification.ipynb  README.md  Restaurant_Ratings.ipynb  google_osm.csv  osm_restaurants.csv  ratings_ta.csv  restaurants.csv  restaurants_osm.csv  test.sty
semester-3/data-science-grundlagen/exercise-1/: Diabetes-Daten.csv  main.rs
semester-3/data-science-grundlagen/src/: app.rs  main.rs
semester-3/zhaw_dps/: DPS_Math.ipynb  (+18 more)
(+368 files in other folders)
